# wellium

./: .env.development  .env.production  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  analysis_options.yaml  capacitor.config.ts  index.html  ionic.config.json  jest.config.cjs  jest.setup.ts  license-header.txt  package-lock.json  package.json  pubspec.yaml  source-header.txt  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: add-license-header.yml  add-source-header.yml  auto-approve-and-merge.yml  auto-assign.yml  codeql.yml  deploy.yml  enforce-signed-commits.yml  flutter_ci.yml  rust-ci.yml
android/: Cargo.toml  build.gradle  capacitor.settings.gradle  gradle.properties  settings.gradle  variables.gradle
android/app/: build.gradle  capacitor.build.gradle
android/keystores/: my-release-key.jks
android/src/: lib.rs
certs/: relay.localhost-key.pem  relay.localhost.pem
core/: Cargo.toml
core/src/: lib.rs
electron/: capacitor.config.ts  main.cjs  package-lock.json  package.json
electron/src/: index.ts
gui/: Cargo.toml
gui/src/: lib.rs
ios/: Cargo.toml
ios/App/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/src/: lib.rs
lib/: app.dart  main.dart
lib/data/: box_manager.dart  db_connection.dart  hive_init_provider.dart
lib/models/: note.dart  (+4 more)
linux/: CMakeLists.txt
main/: Cargo.toml
main/src/: main.rs
public/: manifest.json
src/: App.tsx  main.tsx
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+78 files in other folders)
