[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = "0.6"
leptos_macro = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = [
	"IdbDatabase",
	"IdbObjectStore",
	"IdbTransaction",
	"IdbTransactionMode",
	"Window",
	"IdbFactory",
	"IdbOpenDbRequest",
	"IdbRequest",
	"DomStringList",
	"Event",
	"EventTarget",
	"HtmlInputElement",
	"SubmitEvent",
	"console",
	"Document",
	"Element",
	"HtmlElement",
	"Node",
	"Storage",
	"Window",
] }
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
gloo-console = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
