[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }

gui = { path = "../gui" }

[target.'cfg(target_os = "android")'.dependencies]
android = { path = "../android" }

[target.'cfg(target_os = "ios")'.dependencies]
ios = { path = "../ios" }


[[bin]]
name = "main"
path = "src/main.rs"
